Release v1.0.3: fix auto-update for EXE distribution.
Co-authored-by: Cursor <cursoragent@cursor.com>